refactor: modularize SearchService with helper methods